# personal-agent

./: .gitignore  README.md  langgraph.json  pyproject.toml
prompts/: personal_assistant_prompt.md
src/personal_agent/: agent.py  main.py
src/personal_agent/tools/: calendar_tools.py  date_tools.py  filesystem_tools.py
